
    HIVE-1829. Fix intermittent failures in TestRemoteMetaStore
    (Carl Steinbach via jvs)

    HIVE-1927. Fix TestHadoop20SAuthBridge failure on Hudson
    (Devaraj Das via jvs)

    HIVE-1942. change the value of hive.input.format to CombineHiveInputFormat for tests
    (namit via He Yongqiang)

    HIVE-1952. fix some outputs and make some tests deterministic
    (namit via He Yongqiang)

  TASKS

    HIVE-1526. Hive should depend on a release version of Thrift
    (Carl Steinbach via Ning Zhang)

Release 0.6.0 - 2010-10-19

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-964. Handle skew join
    (Yongqiang He via namit)

    HIVE-972. Support views. (John Sichi via zshao)

    HIVE-1172. Add UDFS to create struct (Zheng Shao via Ning Zhang)

    HIVE-894. add udaf max_n, min_n to contrib (Zheng Shao via Yongqiang He)

    HIVE-1152. Add metastore API method to drop/append partition by name.
    (Paul Yang via zshao)

    HIVE-1147. Update Eclipse project configuration to match Checkstyle
    (Carl Steinbach via zshao)

    HIVE-1117. Make queryPlan serializable
    (Zheng Shao via namit)

    HIVE-917. Bucketed Map Join
    (He Yongqiang via namit)

    HIVE-1178. enforce bucketing for a table.
    (Namit Jain via He Yongqiang)

    HIVE-1188. NPE when TestJdbcDriver/TestHiveServer
    (Call Steinbach via Ning Zhang)

    HIVE-1032. Better Error Messages for Execution Errors.
    (Paul Yang via zshao)

    HIVE-1193. ensure sorting properties for a table.
    (Namit via He Yongqiang)

    HIVE-259. Add PERCENTILE aggregate function.
    (Jerome Boulon, Zheng via He Yongqiang)

    HIVE-1197. Add BucketizedHiveInputFormat
    (Siying Dong via namit)

    HIVE-1194. Add sort merge join
    (He Yongqiang via namit)

    HIVE-705. Read HBase tables via Hive
    (John Sichi via namit)

    HIVE-1027. Create UDFs for XPath expression evaluation
    (Patrick Angeles via Ning Zhang)

    HIVE-1238. Get Partitions with a partial specification