@@ -798,6 +798,9 @@ Trunk -  Unreleased
     HIVE-1952. fix some outputs and make some tests deterministic
     (namit via He Yongqiang)
 
+    HIVE-1970. Modify build to run all tests regardless of subproject failures.
+    (Carl Steinbach via jvs)
+
   TASKS
 
     HIVE-1526. Hive should depend on a release version of Thrift
